--- a/detail.html
+++ b/detail.html
@@ -48,7 +48,30 @@
     <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.29.14_8c98b5cb.jpg" alt="Nia 6"></div>
     <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.26.07_ec66d570.jpg" alt="Nia 1"></div>
     <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.29.12_135b5c05.jpg" alt="Nia 2"></div>
-    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.24.50_63b49fac.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.16_aa4c8dad.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.18_00e93d22.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.19_5e53b30a.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.19_b9314f7e.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.20_98a2b906.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.21_2cc3c5b2.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.22_c484f2f3.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.22_fbbb08c7.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.23_77b50d16.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.24_12d7f5fd.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.25_e30ca9a4.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.26_a0f6bb17.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.26_bfb34481.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.27_21539130.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.28_a000471b.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.27.29_934a9c0a.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.52_66abbb44.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.52_9765d7ac.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.53_63beb092.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.53_822cd275.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.53_f9351d4f.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.54_83e721ca.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.54_c4aaf080.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.03.54_f5f92ed9.jpg" alt="Nia 7"></div>
     <div class="photo-card"><img src="asset/ring.png" alt="Ring" id="ring"></div>
 
       </div>
@@ -85,6 +108,33 @@
     <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.24.59_f8966840.jpg" alt="Nia 16"></div>
     <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.25.00_112006b8.jpg" alt="Nia 17"></div>
     <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-27 at 15.25.00_84fd9218.jpg" alt="Nia 18"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.00_5c4f82ef.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.00_7b1b0d45.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.00_c35f94d5.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.01_306df0dc.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.01_5a566349.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.01_c86b354d.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.02_a758562c.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.02_f8209366.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.03_66be25aa.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.03_788a569f.jpg" alt="Nia 7"></div>
+    <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 19.28.03_7a2c9635.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.12_fa215d63.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.13_16a17359.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.13_4a19b951.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.14_64e893b4.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.14_b92864cc.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.15_92eba1a0.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.16_454cb0ee.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.16_f8d31d52.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.17_2cdd396a.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.18_65a63689.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.19_32686fff.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.19_bc16d47b.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.20_f1fef297.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.21_86c32e40.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.21_d6681a4b.jpg" alt="Nia 7"></div>
+      <div class="photo-card"><img src="asset/WhatsApp Image 2025-06-29 at 21.02.22_77e0c0ff.jpg" alt="Nia 7"></div>
       </div>
     </div>
   </section>
